--- a/Site.Master
+++ b/Site.Master
@@ -52,6 +52,8 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Inicio</a></li>
+                        <li><a runat="server" href="~/Update/">Actualizar</a></li>
+                        <li><a runat="server" href="~/Delete/">Borrar</a></li>
                         <li><a runat="server" href="~/About">Acerca de</a></li>
                         <li><a runat="server" href="~/Contact">Contacto</a></li>
                     </ul>
